@@ -158,10 +158,6 @@ issue 218:
 issue 219:
     bug: errors with block showing are printed multiply times in BlockItemGenerator
 
-issue 230: [similar to former issue 9]
-    bug: items are not arrival when rebuilding or doing similar things
-    work-around: restart the client, works than as expected
-
 issue 235:
     bug: tools are CONSUMED when using them
 
