@@ -115,9 +115,11 @@ class StateBlockItemGenerator(State.State):
         G.world.cleanup()
         with open(G.build+"/itemblockfactory.json", mode="w") as f:
             json.dump(self.table, f)
+        G.registry.get_by_name("item").unlock()
         mcpython.factory.ItemFactory.ItemFactory.process()
+        G.registry.get_by_name("item").lock()
         mcpython.item.ItemHandler.build()
-        mcpython.item.ItemHandler.load_data(from_block_item_generator=True)
+        mcpython.item.ItemHandler.ITEM_ATLAS.load()
         G.window.set_minimum_size(1, 1)
         G.window.set_maximum_size(100000, 100000)  # only here for making resizing possible again
         mcpython.event.TickHandler.handler.enable_tick_skipping = True
